src/parse/JSON.g4

/** Taken from "The Definitive ANTLR 4 Reference" by Terence Parr */

// Derived from http://json.org
grammar JSON;

json
   : value
   ;

object
   : '{' pair (',' pair)* '}' # fullObject
   | '{' '}'    # emptyObject
   ;

pair
   : STRING ':' value
   ;

array
   : '[' value (',' value)* ']' # fullArray
   | '[' ']'    # emptyArray
   ;

value
   : STRING # plain
   | NUMBER # plain
   | object # valueObject
   | array  # valueArray
   | 'true' # plain
   | 'false' # plain
   | 'null'  # plain
   ;


STRING
   : '"' (ESC | ~ ["\\])* '"'
   ;


fragment ESC
   : '\\' (["\\/bfnrt] | UNICODE)
   ;


fragment UNICODE
   : 'u' HEX HEX HEX HEX
   ;


fragment HEX
   : [0-9a-fA-F]
   ;


NUMBER
   : '-'? INT '.' [0-9] + EXP? | '-'? INT EXP | '-'? INT
   ;


fragment INT
   : '0' | [1-9] [0-9]*
   ;

// no leading zeros

fragment EXP
   : [Ee] [+\-]? INT
   ;

// \- since - means "range" inside [...]

WS
   : [ \t\n\r] + -> skip
   ;
